# interpretable-text-classification

./: .gitignore  _quarto.yml  amazon.qmd  clinc150.qmd  concepts.qmd  imdb.qmd  index.qmd  main.py  naf.qmd  pyproject.toml  styles.css
.github/workflows/: pages.yml
argo/: benchmark.yaml  clinc150_sweep.yaml
assets/: clinc150_domains.json  clinc150_labels.json  naf2025_structure.json
benchmark/: explain.py  randomized_search.py  run.py  run_all.py  summarize.py  train.py
benchmark/argo/: benchmark.yaml  data_efficiency.yaml
benchmark/conf/: config.yaml  explain.yaml
benchmark/conf/dataset/: 20newsgroups.yaml  amazon.yaml  clinc150.yaml  imdb.yaml
benchmark/conf/model/: default.yaml
benchmark/conf/tokenizer/: ngram.yaml
benchmark/configs/: fasttext.yaml  fasttext_wpiece.yaml  wordpiece_transformer.yaml
benchmark/results/: amazon_runs.csv
benchmark/results/explain_2e44179b/: captum.npz  faithfulness.npz  self_attn.npz
benchmark/results/explain_8286dc71/: captum.npz  linear_weights.npz
benchmark/results/explain_8cb23a62/: captum.npz  class_vectors.npz  faithfulness.npz  self_attn.npz
conf/: train_multilevel.yaml
conf/dataset/: ag_news.yaml  banking77.yaml  clinc150.yaml  clinc150_noos.yaml  imdb.yaml  naf.yaml  sst2.yaml  subj.yaml
conf/model/: default.yaml
conf/tokenizer/: ngram.yaml  wordpiece.yaml
conf/training/: default.yaml
results/amazon/: runs.csv  train_eff.csv
results/clinc150/: runs.csv  runs_no_oos.csv
src/: explain.py  train.py
src/multilevel/: __init__.py  naf_data.py  naf_model.py  train.py
(+33 files in other folders)
