[project]
name = "textclsf-insee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "torch",
    "torchvision",
    "torchtextclassifiers[huggingface]",
    "transformers>=5.6.2",
    "mlflow>=3.12.0",
    "hydra-core>=1.3.2",
    "pyyaml>=6.0.3",
    "jupyter>=1.1.1",
    "plotly>=6.7.0",
    "torchfasttext[explainability]>=0.1.0",
    "umap-learn>=0.5.12",
]

[tool.uv.sources]
torchtextclassifiers = { git = "https://github.com/InseeFrLab/torchTextClassifiers.git" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
